[tool.poetry]
name = "hello-flask-poetry"
version = "0.1.0"
description = ""
authors = ["Donatas Rasiukevicius <donatas@fly.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
flask = "^3.0.3"
gunicorn = "^22.0.0"
pybamm = "^24.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
